<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sweekritee.notifyme.Login"
    android:weightSum="1"
    android:orientation="vertical"
    android:background="@drawable/gradient">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifyme"
        android:textAlignment="center"
        android:fontFamily="sans-serif"
        android:textSize="50sp"
        android:layout_marginTop="50dp"
        android:textStyle="italic"
         />
    <TextView
        android:id="@+id/extratext"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        />

    <EditText
        android:id="@+id/username_login"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:layout_marginTop="20dp"
        android:layout_weight="0.17" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:layout_weight="0.09" />



    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="0dp"
        android:text=""
        android:layout_gravity="center"
        android:textSize="20sp"/>

</LinearLayout>
