<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.sweekritee.notifyme.Add_Event"
        android:weightSum="1">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />



        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/name_event"
            android:textSize="20sp" />



        <EditText
            android:id="@+id/eventname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/eventdesc"
            android:textSize="20sp" />
        <MultiAutoCompleteTextView
            android:id="@+id/eventdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="11dp"
            android:text=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="26dp"
            android:text="@string/eventtype"
            android:textSize="20sp" />



        <EditText
            android:id="@+id/eventtype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:text="@string/eventlocation"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/eventlocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:text="@string/eventdate"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/eventdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="13dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="20sp" />

        <Button
            android:id="@+id/eventdescadd_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/add"
            android:textSize="15sp"
            android:layout_weight="0.22" />
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/FAB_addevents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimaryDark"
        app:fabSize="mini"
        app:srcCompat="?attr/homeAsUpIndicator" />


    </android.support.design.widget.CoordinatorLayout>

