<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">





    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/gradient"

            tools:context="com.example.sweekritee.notifyme.Add_Routine">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/colorPrimaryDark"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
               />

            <ImageView
                android:id="@+id/routine_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"

               />

            <EditText
                android:id="@+id/image_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/image_name"

                android:layout_marginTop="16dp"
                android:visibility="gone"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <Button
                android:id="@+id/choose_routine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_style"
                android:text="@string/choose_picture" />

            <Button
                android:id="@+id/upload_routine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_style"
                android:text="@string/upload_picture" />




        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/FAB_addroutine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimaryDark"
        app:fabSize="mini"
        app:srcCompat="?attr/homeAsUpIndicator" />



</android.support.design.widget.CoordinatorLayout>
